# lenticular_cloud

./: .gitignore  MANIFEST.in  Makefile  README.md  application.cfg  cli.py  default.nix  flake.nix  hydra_client.json  import.py  index.html  module.nix  mypy.ini  overlay.nix  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  shell.nix  tox.ini  webpack.config.js  wsgi.py
browser_app/: confirm-modal.js  index.js  style.scss
lenticular_cloud/: app.py  application.cfg  auth_providers.py  cli.py  config_development.toml  hydra.py  lenticular_services.py  model.py  model_db.py  pki.py  wrapped_fido2_server.py  wsgi.py
lenticular_cloud/form/: admin.py  auth.py  base.py  frontend.py  login.py
lenticular_cloud/migrations/: env.py
lenticular_cloud/static/: main.css  main.css.map  main.js  main.js.LICENSE.txt  main.js.map
lenticular_cloud/template/: base.html.j2  skelet.html.j2
lenticular_cloud/translations/: __init__.py
lenticular_cloud/views/: __init__.py  admin.py  api.py  auth.py  frontend.py  oauth2.py  oidc.py  pki.py
libs/: README.md
libs/ory-hydra-client/: README.md  pyproject.toml  setup.py
migrations/versions/: 52a21983d2a8_add_webauthn.py  ff2f2e871dfc_init.py
mokup/: entries.json  info.json  schema.json
schema/: lenticular.ldif
specs/: hydra.yaml
specs/api_template/: endpoint_macros.py.jinja  endpoint_module.py.jinja  model.py.jinja
static/: main.css  main.css.map  main.js  main.js.LICENSE.txt  main.js.map
templates/: base.html.j2  skelet.html.j2
tests/: model.py  test_json.py
(+215 files in other folders)
