[metadata]
name = lenticular_cloud
version = 0.0.1
description = user management portal

[options]
packages = lenticular_cloud
install_requires =
 Flask
 gunicorn
 flask_babel
 flask_wtf
 flask_login
 flask_sqlalchemy
 Flask-Dance
 ldap3
 ldap3_orm
 python-u2flib-server
 pyotp
 cryptography
 requests
 requests_oauthlib
 blinker
 ory-hydra-client
 flask-debug
